<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helmoro_bringup</name>
  <version>0.0.0</version>
  <description>Manages a Helmoro Instance</description>
  <maintainer email="marc.bloechlinger@helbling.ch">htkz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Helmoro -->
  <depend>helmoro_description</depend>
  <depend>helmoro_simulator</depend>
  <depend>helmoro_visualization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
