<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helmoro_description</name>
  <version>2.0.0</version>
  <description>Hosts models required for simulation of HelMoRo.</description>
  <maintainer email="marc.bloechlinger@helbling.ch">Marc Blöchlinger</maintainer>
  <license>BSD</license>

  <author>Helbling Technik AG</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>

  <exec_depend>helmoro_control</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros                                                                 
      gazebo_plugin_path="${prefix}/lib"
      gazebo_model_path="${prefix}/../.." /> 
  </export>

</package>