<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helmoro_state_estimation</name>
  <version>2.0.0</version>
  <description>Provides launch and configuration scripts for amcl localization package.</description>
  <maintainer email="marc.bloechlinger@helbling.ch">Marc Blöchlinger</maintainer>
  <license>BSD</license>

  <author>Helbling Technik AG</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>